
2000/01/13
	Make the out buffer accessable.
