@@ -1,4 +1,7 @@
 
+2001/12/14
+	Added a $mailto variable to CGI::Out & CGI::Wrap to
+	specify where mail bombs should be sent
 2000/01/13
 	Make the out buffer accessable.
 
